added transformer embedding

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,35 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import torch\n",
-    "from transformer_vq.nn.attn_vq import VQAttentionQK\n"
+    "from transformer_vq.nn.attn_vq import VQAttentionQK\n",
+    "import yaml\n",
+    "from einops import rearrange"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'batch_size'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m n_vocab \u001b[38;5;241m=\u001b[39m config[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mn_vocab\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      4\u001b[0m sequence_length \u001b[38;5;241m=\u001b[39m config[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msequence_len\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m----> 5\u001b[0m batch_size \u001b[38;5;241m=\u001b[39m \u001b[43mconfig\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mbatch_size\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m      6\u001b[0m vocabularies \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mrandint(low\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m, high\u001b[38;5;241m=\u001b[39mn_vocab, size\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m1\u001b[39m, sequence_length))\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'batch_size'"
+     ]
+    }
+   ],
+   "source": [
+    "with open('conf.yml') as f:\n",
+    "    config = yaml.load(f, Loader=yaml.FullLoader)\n",
+    "n_vocab = config['n_vocab']\n",
+    "sequence_length = config['sequence_len']\n",
+    "batch_size = config['batch_size']\n",
+    "vocabularies = torch.randint(low=0, high=n_vocab, size=(4, sequence_length))"
    ]
   },
   {
