--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -203,6 +203,175 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import einops; import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 1, 4])\n",
+      "torch.Size([3, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = torch.randn(3, 1, 4)\n",
+    "x_squeezed = rearrange(x, 'h 1 w -> h w')\n",
+    "\n",
+    "print(x.shape)        # Output: torch.Size([3, 1, 4])\n",
+    "print(x_squeezed.shape)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import copy\n",
+    "import math\n",
+    "\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "# Copy a module N times\n",
+    "def clones(module, N):\n",
+    "    return nn.ModuleList([copy.deepcopy(module) for _ in range(N)])\n",
+    "\n",
+    "# Implement attention (Scaled Dot Product)\n",
+    "def attention(query, key, value, mask=None, dropout=None):\n",
+    "    d_k = query.size(-1)\n",
+    "    scores = torch.matmul(query, key.transpose(-2, -1)) / math.sqrt(d_k)\n",
+    "    if mask is not None:\n",
+    "        scores = scores.masked_fill(mask == 0, -1e9)\n",
+    "    p_attn = F.softmax(scores, dim = -1)\n",
+    "    if dropout is not None:\n",
+    "        p_attn = dropout(p_attn)\n",
+    "    attention_result = torch.matmul(p_attn, value)\n",
+    "    return attention_result, p_attn\n",
+    "\n",
+    "class MultiHeadedAttention(nn.Module):\n",
+    "    def __init__(self, h, d_model, dropout=0.1):\n",
+    "        \"Take in model size and number of heads.\"\n",
+    "        super(MultiHeadedAttention, self).__init__()\n",
+    "        assert d_model % h == 0\n",
+    "        # We assume d_v always equals d_k\n",
+    "        self.d_k = d_model // h\n",
+    "        self.h = h\n",
+    "        self.linears = clones(nn.Linear(d_model, d_model), 4)\n",
+    "        self.attn = None\n",
+    "        self.dropout = nn.Dropout(p=dropout)\n",
+    "        \n",
+    "    def forward(self, query, key, value, mask=None):\n",
+    "        \"Implements Figure 2\"\n",
+    "        if mask is not None:\n",
+    "            # Same mask applied to all h heads.\n",
+    "            mask = mask.unsqueeze(1)\n",
+    "        nbatches = query.size(0)\n",
+    "        \n",
+    "        # 1) Do all the linear projections in batch from d_model => h x d_k \n",
+    "        query, key, value = [l(x).view(nbatches, -1, self.h, self.d_k).transpose(1, 2) \n",
+    "                             for l, x in zip(self.linears, (query, key, value))]\n",
+    "        \n",
+    "        # 2) Apply attention on all the projected vectors in batch. \n",
+    "        x, self.attn = attention(query, key, value, mask=mask, dropout=self.dropout)\n",
+    "        \n",
+    "        # 3) \"Concat\" using a view and apply a final linear. \n",
+    "        x = x.transpose(1, 2).contiguous().view(nbatches, -1, self.h * self.d_k)\n",
+    "        return self.linears[-1](x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "With as many attention queries as there are values:\n",
+      "\n",
+      "query: torch.Size([4, 1, 128])\n",
+      "value: torch.Size([4, 2048, 128])\n",
+      "result: torch.Size([4, 1, 128])\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "batch_size = 4\n",
+    "sequence_length = 2048\n",
+    "hidden_size = 128\n",
+    "attention_heads = 1\n",
+    "mha = MultiHeadedAttention(h=attention_heads, d_model=hidden_size)\n",
+    "print(\"With as many attention queries as there are values:\\n\")\n",
+    "query = torch.tensor(np.ones([batch_size, 1, hidden_size])).float()\n",
+    "value = torch.tensor(np.ones([batch_size, sequence_length, hidden_size])).float()\n",
+    "result = mha.forward(query, value, value)\n",
+    "print(\"query:\", query.size())\n",
+    "print(\"value:\", value.size())\n",
+    "print(\"result:\", result.size())\n",
+    "print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def attention(query, key, value, mask=None, dropout=None):\n",
+    "    d_k = query.size(-1)\n",
+    "    scores = torch.matmul(query, key.transpose(-2, -1)) / math.sqrt(d_k)\n",
+    "    if mask is not None:\n",
+    "        scores = scores.masked_fill(mask == 0, -1e9)\n",
+    "    p_attn = F.softmax(scores, dim = -1)\n",
+    "    if dropout is not None:\n",
+    "        p_attn = dropout(p_attn)\n",
+    "    attention_result = torch.matmul(p_attn, value)\n",
+    "    return attention_result, p_attn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 2048, 1, 128])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "queries = torch.randn(4, 2048, 1, 128)\n",
+    "keys = torch.randn(4, 2048, 1, 128)\n",
+    "values = torch.randn(4, 2048, 1, 128)\n",
+    "# shape(batch, sequence_length, num_heads, hidden_size)\n",
+    "attention(queries, keys, values)[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
