--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -372,6 +372,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting flops-profiler\n",
+      "  Obtaining dependency information for flops-profiler from https://files.pythonhosted.org/packages/43/26/5732be586af7ab6cf8a518c91e7a5a44a839aa00d014173eee0398d357c7/flops_profiler-0.1.2-py3-none-any.whl.metadata\n",
+      "  Downloading flops_profiler-0.1.2-py3-none-any.whl.metadata (33 kB)\n",
+      "Requirement already satisfied: importlib-metadata<7.0.0,>=6.0.0 in /Users/jmuneton/miniconda3/envs/torch/lib/python3.9/site-packages (from flops-profiler) (6.8.0)\n",
+      "Requirement already satisfied: zipp>=0.5 in /Users/jmuneton/miniconda3/envs/torch/lib/python3.9/site-packages (from importlib-metadata<7.0.0,>=6.0.0->flops-profiler) (3.17.0)\n",
+      "Downloading flops_profiler-0.1.2-py3-none-any.whl (20 kB)\n",
+      "Installing collected packages: flops-profiler\n",
+      "Successfully installed flops-profiler-0.1.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install flops-profiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'get_model_profile' from 'flops_profiler' (/Users/jmuneton/miniconda3/envs/torch/lib/python3.9/site-packages/flops_profiler/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorchvision\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmodels\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mmodels\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mflops_profiler\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m get_model_profile\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mdevice(\u001b[38;5;241m0\u001b[39m):\n\u001b[1;32m      6\u001b[0m     model \u001b[38;5;241m=\u001b[39m models\u001b[38;5;241m.\u001b[39malexnet()\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'get_model_profile' from 'flops_profiler' (/Users/jmuneton/miniconda3/envs/torch/lib/python3.9/site-packages/flops_profiler/__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "import torchvision.models as models\n",
+    "import torch\n",
+    "from flops_profiler import get_model_profile\n",
+    "\n",
+    "with torch.cuda.device(0):\n",
+    "    model = models.alexnet()\n",
+    "    batch_size = 256\n",
+    "    flops, macs, params = get_model_profile(model=model, # model\n",
+    "                                    input_shape=(batch_size, 3, 224, 224), # input shape to the model. If specified, the model takes a tensor with this shape as the only positional argument.\n",
+    "                                    args=None, # list of positional arguments to the model.\n",
+    "                                    kwargs=None, # dictionary of keyword arguments to the model.\n",
+    "                                    print_profile=True, # prints the model graph with the measured profile attached to each module\n",
+    "                                    detailed=True, # print the detailed profile\n",
+    "                                    module_depth=-1, # depth into the nested modules, with -1 being the inner most modules\n",
+    "                                    top_modules=1, # the number of top modules to print aggregated profile\n",
+    "                                    warm_up=10, # the number of warm-ups before measuring the time of each module\n",
+    "                                    as_string=True, # print raw numbers (e.g. 1000) or as human-readable strings (e.g. 1k)\n",
+    "                                    output_file=None, # path to the output file. If None, the profiler prints to stdout.\n",
+    "                                    ignore_modules=None, # the list of modules to ignore in the profiling\n",
+    "                                    func_name='forward') # the function name to profile, \"forward\" by default, for huggingface generative models, `generate` is used"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
